<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.whitestein.vaadin.widgets</groupId>
    <artifactId>wt-pdf-viewer</artifactId>
    <version>2.0.2-SNAPSHOT</version>
    <packaging>bundle</packaging>
    <name>WT PDF Viewer</name>
    <description>PDF viewer component for Vaadin applications based on pdf.js web viewer. Features:
    
* Sidebar with thumbnails, document outline and attachments
* Text search in PDF text
* Previous page, next page and jump to arbitrary page
* Zooming out up to 10%, automatic zoom, zoom to actual size, fit page, full width
* Full-screen presentation Mode
* Document print
* Document download
* Rotation clockwise and counterclockwise
* Hand tool for comfortable scrolling
* Document properties
	</description>
	<url>https://github.com/WhitesteinTechnologies/wt-pdf-viewer</url>
	<inceptionYear>2017</inceptionYear>
    <organization>
        <name>Whitestein Technologies</name>
    </organization>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <vaadin.version>8.7.2</vaadin.version>
        <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
        <!-- ZIP Manifest fields -->
        <Implementation-Version>${project.version}</Implementation-Version>
        <!-- Must not change this because of the Directory -->
        <Implementation-Title>${project.name}</Implementation-Title>
        <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
        <Vaadin-License-Title>Apache License 2.0</Vaadin-License-Title>
        <Vaadin-Addon>${project.artifactId}-${project.version}.jar</Vaadin-Addon>
    </properties>
    <scm>
        <url>https://github.com/WhitesteinTechnologies/wt-pdf-viewer</url>
        <connection>scm:git:https://github.com/WhitesteinTechnologies/wt-pdf-viewer.git</connection>
        <developerConnection>scm:git:https://github.com/WhitesteinTechnologies/wt-pdf-viewer.git</developerConnection>
      <tag>HEAD</tag>
  </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/WhitesteinTechnologies/wt-pdf-viewer/issues</url>
    </issueManagement>
    <licenses>
        <license>
            <name>Apache 2</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <dependencies>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-server</artifactId>
            <version>${vaadin.version}</version>
        </dependency>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-client</artifactId>
            <version>${vaadin.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.vaadin</groupId>
            <artifactId>addon-test-helpers</artifactId>
            <version>2.0.alpha5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-themes</artifactId>
            <version>${vaadin.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-client-compiled</artifactId>
            <version>${vaadin.version}</version>
            <scope>test</scope>
        </dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.21</version>
		</dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>vaadin-addons</id>
            <url>http://maven.vaadin.com/vaadin-addons</url>
        </repository>
    </repositories>
    
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <!-- GWT hack. This adds sources, .gwt.xml files etc to jar from source directory. 
                Not quite maven convention but easieast to setup this way.  -->
                <directory>src/main/java</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <!-- add proper OGSI entries to manifest -->
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>3.2.0</version>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Export-Package>!com.whitestein.vaadin.widgets.wtpdfviewer.client, com.whitestein.vaadin.widgets.wtpdfviewer.*</Export-Package>
                        <Import-Package>!com.google.gwt.*,!com.vaadin.client.*,*</Import-Package>
                    </instructions>
                </configuration>
                <executions>
                    <execution>
                        <id>manifest</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>manifest</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <!-- Skip deployment as we expect the artifact to be manually 
                deployed to vaadin.com/directory -->
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <archive>
                        <index>true</index>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                        <manifestEntries>
                            <!-- Package format version - do not change -->
                            <Vaadin-Package-Version>1</Vaadin-Package-Version>
                            <Vaadin-License-Title>${Vaadin-License-Title}</Vaadin-License-Title>
                            <Vaadin-Widgetsets>com.whitestein.vaadin.widgets.wtpdfviewer.Widgetset</Vaadin-Widgetsets>
                            <Vaadin-Stylesheets>VAADIN/themes/wtpdfviewer/wtpdfviewer.scss</Vaadin-Stylesheets>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <releaseProfiles>directorypackage</releaseProfiles>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-maven-plugin</artifactId>
                <version>${vaadin.version}</version>
                <configuration>
                    <webappDirectory>${project.build.directory}/testwebapp/VAADIN/widgetsets</webappDirectory>
                    <extraJvmArgs>-Xmx1024M -Xss512m -XX:MaxPermSize=1024m</extraJvmArgs>
                    <hostedWebapp>${project.build.directory}/testwebapp</hostedWebapp>
                    <noServer>true</noServer>
                    <runTarget>http://localhost:9998/</runTarget>
                    <draftCompile>true</draftCompile>
                    <style>PRETTY</style>
                    <module>com.whitestein.vaadin.widgets.wtpdfviewer.Widgetset</module>
                    <!-- If you do lots of e.g. plain css changes and don't wish to use 
                    hosted mode, you can force compile easily with uncommenting following rule -->
                    <!-- <force>true</force> -->
                    <strict>true</strict>
           </configuration>
                <executions>
                    <execution> 
                        <id>testwidgetset</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <skip>${skipTests}</skip>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- build javadocs during development builds as well to 
             show javadoc syntax issues before release. Remove this 
             to speed up the build a bit.
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>javadoc</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
            </plugin>
			<!--  testing - this is so that we can have styled test demo classes -->
      		<plugin>
        		<artifactId>maven-resources-plugin</artifactId>
        		<version>3.0.2</version>
        		<executions>
          		<execution>
            		<id>copy-resources</id>
		            <!-- here the phase you need -->
        		    <phase>test</phase>
		            <goals>
        		      <goal>copy-resources</goal>
		            </goals>
        		    <configuration>
        		      <resources>          
                		<resource>
                      		<directory>${project.basedir}/src/test/resources/testwebapp</directory>
		                  	<filtering>true</filtering>
        		        </resource>
                		<resource>
                      		<directory>${project.basedir}/src/main/resources/VAADIN/themes/wtpdfviewer</directory>
		                  	<filtering>true</filtering>
        		        </resource>
		              </resources>              
		              <outputDirectory>${project.build.directory}/testwebapp/VAADIN/themes</outputDirectory>
        		    </configuration>            
		          </execution>
        		</executions>
		      </plugin>            
            
            <plugin>
            		<groupId>org.codehaus.mojo</groupId>
            		<artifactId>exec-maven-plugin</artifactId>
            		<version>1.2.1</version>
            		<configuration>
               			<mainClass>com.vaadin.sass.SassCompiler</mainClass>
               			<classpathScope>test</classpathScope>
               			<arguments>
               				<argument>${project.build.directory}/testwebapp/VAADIN/themes/wt-pdf-viewer-test.scss</argument>
               				<argument>${project.build.directory}/testwebapp/VAADIN/themes/wtpdfviewer.css</argument>
               			</arguments>
            			</configuration>
             			<executions>
                			<execution>
                  			<goals>
                    			<goal>java</goal>
                  			</goals>
                  			<phase>test</phase>
                			</execution>
              			</executions>
            </plugin>			
            
            
        </plugins>
    </build>
    
    <profiles>
        <profile>
            <id>directorypackage</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <version>2.6</version>
                        <configuration>
                            <appendAssemblyId>false</appendAssemblyId>
                            <descriptors>
                                <descriptor>assembly/assembly.xml</descriptor>
                            </descriptors>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>single</goal>
                                </goals>
                                <phase>install</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>browsertests</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.github.webdriverextensions</groupId>
                        <artifactId>webdriverextensions-maven-plugin</artifactId>
                        <version>3.1.1</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>install-drivers</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <drivers>
                                <driver>
                                    <name>phantomjs</name>
                                </driver>
                            </drivers>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.19.1</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    
                </plugins>
            </build>
            <activation>
                <!-- Change to run browser tests on each build -->
                <activeByDefault>false</activeByDefault>
            </activation>
        </profile>
    </profiles>
    
</project>
